[gd_scene load_steps=10 format=2]

[ext_resource path="res://station_A.png" type="Texture" id=1]
[ext_resource path="res://ship_B.png" type="Texture" id=2]
[ext_resource path="res://Turret.gd" type="Script" id=3]
[ext_resource path="res://star_01.png" type="Texture" id=4]
[ext_resource path="res://plain-circle.png" type="Texture" id=5]
[ext_resource path="res://circle2.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Barrel2/Barrel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Barrel2/Barrel:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barrel2/Barrel/SpawnLocation/Effect:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Barrel2/Barrel:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0, -2.31009, -8.03439, -0.219618, 0.0901465, 0.786482, 0.13522, 0.033721, -0.4, -6.31026, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 2 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Barrel2/Barrel/SpawnLocation/Effect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 2848.4

[node name="Turret" type="Node2D"]
script = ExtResource( 3 )

[node name="TargetIndicator" type="Sprite" parent="."]
visible = false
modulate = Color( 0.854902, 0.054902, 0.054902, 1 )
scale = Vector2( 0.2, 0.2 )

[node name="Base" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Barrel2" type="Node2D" parent="."]
scale = Vector2( 1.4, 1.4 )

[node name="Barrel" type="Sprite" parent="Barrel2"]
self_modulate = Color( 0.698039, 0.184314, 0.184314, 1 )
texture = ExtResource( 2 )
offset = Vector2( 10, 0 )

[node name="SpawnLocation" type="Position2D" parent="Barrel2/Barrel"]
position = Vector2( 39, 0 )

[node name="Effect" type="Sprite" parent="Barrel2/Barrel/SpawnLocation"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/shoot = SubResource( 1 )

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
visible = false
shape = SubResource( 3 )

[node name="RangeHint" type="Sprite" parent="."]
visible = false
modulate = Color( 0.258824, 0.788235, 0.176471, 1 )
self_modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 11.2, 11.2 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="RangeHint"]
modulate = Color( 0.380392, 0.866667, 0.631373, 0.0627451 )
self_modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 1.07821, 1.07821 )
texture = ExtResource( 5 )
